--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-PORT=3000
+PORT=4200
 DB_PORT=5432
 DB_HOST=localhost
 DB_USER=lesson
 DB_PASSWORD=lesson
 DB_DATABASE=lesson
 DB_NAME=lesson
+SECRET="VeryHardSecret"
+EXPIRE_JWT=86000
